2008-03-16  Bruno Coudoin,,,  <set EMAIL_ADDRESS environment variable>

	- Major cleanup in goocanvas to keep only the minimal we need.
	- Integrated pygoocanvas. No more needed to install it separatly.
	- fixed the file selector background and its highlight button

	* configure.in:
	* src/anim-activity/anim.py:
	* src/boards/Makefile.am:
	* src/boards/py-mod-gcompris.c: (python_gcompris_module_init):
	* src/boards/python.c: (pythonboard_init):
	* src/connect4-2players-activity/init_path.sh:
	* src/draw-activity/init_path.sh:
	* src/gcompris/bar.c: (on_leave_notify), (item_event_bar):
	* src/gcompris/file_selector.c: (display_file_selector),
	(display_files):
	* src/gcompris/gameutil.c: (gc_item_focus_init):
	* src/gcompris/gcompris.c: (setup_window):
	* src/gcompris/gcompris_db.c: (gc_db_remove_board):
	* src/goocanvas/INSTALL:
	* src/goocanvas/Makefile.am:
	* src/goocanvas/aclocal.m4:
	* src/goocanvas/autogen.sh:
	* src/goocanvas/autom4te.cache/output.0:
	* src/goocanvas/autom4te.cache/output.1:
	* src/goocanvas/autom4te.cache/requests:
	* src/goocanvas/autom4te.cache/traces.0:
	* src/goocanvas/autom4te.cache/traces.1:
	* src/goocanvas/config.h.in:
	* src/goocanvas/configure:
	* src/goocanvas/configure.in.REF:
	* src/goocanvas/demo/.cvsignore:
	* src/goocanvas/demo/CVS/Entries:
	* src/goocanvas/demo/CVS/Repository:
	* src/goocanvas/demo/CVS/Root:
	* src/goocanvas/demo/Makefile.am:
	* src/goocanvas/demo/demo-animation.c:
	* src/goocanvas/demo/demo-arrowhead.c:
	* src/goocanvas/demo/demo-clipping.c:
	* src/goocanvas/demo/demo-events.c:
	* src/goocanvas/demo/demo-features.c:
	* src/goocanvas/demo/demo-fifteen.c:
	* src/goocanvas/demo/demo-focus.c:
	* src/goocanvas/demo/demo-grabs.c:
	* src/goocanvas/demo/demo-item.c:
	* src/goocanvas/demo/demo-item.h:
	* src/goocanvas/demo/demo-large-items.c:
	* src/goocanvas/demo/demo-large-line.c:
	* src/goocanvas/demo/demo-large-line.h:
	* src/goocanvas/demo/demo-large-rect.c:
	* src/goocanvas/demo/demo-large-rect.h: